Templates and forms localization

--- a/src/imageboard/templates/403.html
+++ b/src/imageboard/templates/403.html
@@ -5,7 +5,7 @@
 {% block code %}403{% endblock %}
 
 
-{% block title %}Forbidden{% endblock %}
+{% block title %}{% trans "Forbidden" %}{% endblock %}
 
 
 {% block message %}
