--- a/src/imageboard/templates/500.html
+++ b/src/imageboard/templates/500.html
@@ -5,7 +5,7 @@
 {% block code %}500{% endblock %}
 
 
-{% block title %}Server error{% endblock %}
+{% block title %}{% trans "Server error" %}{% endblock %}
 
 
 {% block message %}
