--- a/src/imageboard/templates/imageboard/board_page.html
+++ b/src/imageboard/templates/imageboard/board_page.html
@@ -49,9 +49,9 @@
 {% block metadata %}
     {% if cache_data %}
         <div class="cache-data">
-            Page generated at {{ cache_data.generated_at|date:config.DATE_TIME_FORMAT }}.
-            Board {{ cache_data.board.hid }} updated at {{ cache_data.updated_at|date:config.DATE_TIME_FORMAT }}.
-            Page {{ cache_data.page }}.
+            {% trans "Page generated at" %} {{ cache_data.generated_at|date:config.DATE_TIME_FORMAT }}.
+            {% trans "Board" %} {{ cache_data.board }} {% trans "updated at" context "board" %} {{ cache_data.updated_at|date:config.DATE_TIME_FORMAT }}.
+            {% trans "Board page" %} {{ cache_data.page }}.
         </div>
     {% endif %}
 {% endblock %}
