--- a/src/imageboard/templates/imageboard/parts/footer.html
+++ b/src/imageboard/templates/imageboard/parts/footer.html
@@ -5,7 +5,7 @@
     <div class="footer__inner">
         {% if board_pages %}
             <div class="footer__paginator">
-                Pages:
+                {% trans "Pages" %}:
                 {% for num in board_pages.paginator.page_range %}
                     {% if num != board_pages.number %}
                         <a
@@ -15,7 +15,6 @@
                     {% else %}
                         <span class="footer__page footer__page--current">{{ num }}</span>
                     {% endif %}
-
                 {% endfor %}
             </div>
         {% endif %}
