--- a/src/imageboard/templates/imageboard/post_popup.html
+++ b/src/imageboard/templates/imageboard/post_popup.html
@@ -4,5 +4,5 @@
 {% if post %}
     {% include 'imageboard/parts/post.html' %}
 {% else %}
-    Пост не найден.
+    {% trans "Post not found." %}
 {% endif %}
