--- a/src/captcha/templates/captcha/captcha_widget.html
+++ b/src/captcha/templates/captcha/captcha_widget.html
@@ -6,7 +6,7 @@
         <img
             class="captcha-widget__image js-captcha-image"
             {# src="{{ widget.image }}" #}
-            alt="Captcha code"
+            alt="{% trans "Captcha code" %}"
             width="200"
             height="40"
         />
