--- a/src/imageboard/templates/400.html
+++ b/src/imageboard/templates/400.html
@@ -5,7 +5,7 @@
 {% block code %}400{% endblock %}
 
 
-{% block title %}Bad request{% endblock %}
+{% block title %}{% trans "Bad request" %}{% endblock %}
 
 
 {% block message %}
