--- a/src/imageboard/templates/imageboard/parts/header.html
+++ b/src/imageboard/templates/imageboard/parts/header.html
@@ -37,7 +37,7 @@
             <span class="header__spacer"></span>
 
             <a class="header__catalog-link" href="{% url 'catalog_page' board_hid=board.hid %}">
-                Каталог тредов
+                {% trans "Thread catalog" %}
             </a>
         {% endif %}
 
