--- a/src/imageboard/templates/imageboard/parts/rules.html
+++ b/src/imageboard/templates/imageboard/parts/rules.html
@@ -3,6 +3,6 @@
 
 
 <div class="rules">
-    <div class="rules__header">Правила доски</div>
+    <div class="rules__header">{% trans "Board rules" %}</div>
     {{ board.rules|markdown|safe }}
 </div>
