--- a/src/imageboard/templates/imageboard/thread_page.html
+++ b/src/imageboard/templates/imageboard/thread_page.html
@@ -43,9 +43,9 @@
 {% block metadata %}
     {% if cache_data %}
         <div class="cache-data">
-            Page generated at {{ cache_data.generated_at|date:config.DATE_TIME_FORMAT }}.
-            Board {{ cache_data.board }}.
-            Thread {{ cache_data.thread.hid2hex }} updated at {{ cache_data.updated_at|date:config.DATE_TIME_FORMAT }}.
+            {% trans "Page generated at" %} {{ cache_data.generated_at|date:config.DATE_TIME_FORMAT }}.
+            {% trans "Board" %} {{ cache_data.board }}.
+            {% trans "Thread" %} {{ cache_data.thread.hid2hex }} {% trans "updated at" context "thread" %} {{ cache_data.updated_at|date:config.DATE_TIME_FORMAT }}.
         </div>
     {% endif %}
 {% endblock %}
