Removed HIDs from page titles

--- a/src/imageboard/templates/imageboard/board_page.html
+++ b/src/imageboard/templates/imageboard/board_page.html
@@ -4,7 +4,7 @@
 
 
 {% block page_title %}
-    {{ config.SITE_NAME }} :: /{{ board.hid }}/ {{ board.name }}
+    {{ config.SITE_NAME }} :: {{ board.name }}T
 {% endblock %}
 
 
