--- a/src/imageboard/templates/imageboard/catalog_page.html
+++ b/src/imageboard/templates/imageboard/catalog_page.html
@@ -6,7 +6,7 @@
 
 
 {% block page_title %}
-    {{ config.SITE_NAME }} :: /{{ board.hid }}/ {{ board.name }} :: Каталог
+    {{ config.SITE_NAME }} :: {{ board.name }} :: {% trans "Thread catalog" %}
 {% endblock %}
 
 
