--- a/src/imageboard/templates/imageboard/thread_page.html
+++ b/src/imageboard/templates/imageboard/thread_page.html
@@ -4,7 +4,7 @@
 
 
 {% block page_title %}
-    {{ config.SITE_NAME }} :: /{{ board.hid }}/ {{ board.name }} :: {{ thread.hid2hex }}
+    {{ config.SITE_NAME }} :: {{ board.name }} {% if thread.op.title %}::{% endif %} {{ thread.op.title }}
 {% endblock %}
 
 
