Thread catalog layout changed from list to grid

--- a/src/imageboard/templates/imageboard/parts/header.html
+++ b/src/imageboard/templates/imageboard/parts/header.html
@@ -37,7 +37,7 @@
             <span class="header__spacer"></span>
 
             <a class="header__catalog-link" href="{% url 'catalog_page' board_hid=board.hid %}">
-                <i class="header__catalog-link-icon icon">view_list</i>
+                <i class="header__catalog-link-icon icon">apps</i>
                 {% trans "Thread catalog" %}
             </a>
         {% endif %}
