--- a/src/frontend/style.less
+++ b/src/frontend/style.less
@@ -153,7 +153,7 @@ a {
   margin-right: 0.5rem;
   color: inherit;
   text-decoration: none;
-  padding: 0 0.5em;
+  padding: 0 0.5rem;
   text-align: center;
 
   &[data-user="true"] {
@@ -620,14 +620,16 @@ a {
 
 .catalog {
   &__items {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -0.5rem -0.5rem 0;
   }
 }
 
 .catalog-item {
-  width: 100%;
-  height: 4rem;
-  margin: 0.5rem 0;
-  padding: 0.5rem 1rem 0.5rem 7rem;
+  width: calc(20% - 1rem);
+  margin: 0.5rem 0.5rem;
+  padding: 1rem;
   background: @main-bg;
   color: @main-color;
   border-radius: @block-border-radius;
@@ -637,27 +639,40 @@ a {
   display: block;
   position: relative;
 
+  &:hover {
+    box-shadow: inset 0 0 0 2px @accent-color;
+  }
+
   &__hid {
   }
 
+  &__header {
+    margin-bottom: 1rem;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__body {
+    //margin-bottom: -0.5rem;
+  }
+
   &__image {
-    position: absolute;
-    width: 6rem;
-    height: 4rem;
-    top: 0;
-    left: 0;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    background-color: #ccc;
-    border-radius:  @block-border-radius 0 0 @block-border-radius;
+    border-radius:  @block-border-radius;
+    box-shadow: @block-shadow;
+    margin-bottom: 0.5rem;
+    display: block;
 
     &--empty {
       text-align: center;
       color: @dimmed-color;
       font-weight: bold;
-      padding: 1rem 0;
+      padding: 2rem 0;
       font-size: 0.8rem;
+      background: #ddd;
+      width: 8rem;
+      height: 6rem;
     }
   }
 
@@ -665,33 +680,51 @@ a {
     font-weight: bold;
   }
 
-  &__header {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    margin-bottom: 0.5rem;
-  }
-
-  &__meta {
+  &__text {
+    //margin-top: 0.5rem;
     font-size: 0.8rem;
-  }
+    line-height: 1;
+    max-height: 4rem;
+    overflow: hidden;
+    position: relative;
+    flex: 0 0 auto;
 
-  &__meta-label {
-    font-weight: bold;
-  }
-
-  &__meta-separator {
     &:after {
-      content: ' / '
+      .rect(0, 2.4rem, 100%, 1.6rem);
+      background: linear-gradient(to bottom, transparent, @main-bg);
+      content: '';
     }
 
-  }
-
-  &__text {
     p, blockquote {
       display: inline;
       margin: 0;
     }
+  }
+
+  &__info {
+    float: right;
+    display: flex;
+  }
+
+  &__posts-count {
+    padding-left: calc(@icon-size + 0.2rem);
+    position: relative;
+    float: right;
+    color: @dimmed-color;
+  }
+
+  &__posts-count-icon {
+    .rect(0, 50%, @icon-size, 18px);
+    transform: translateY(-50%);
+    text-align: right;
+    fill: @dimmed-color;
+  }
+
+  &__icon {
+    width: 18px;
+    height: 18px;
+    color: @dimmed-color;
+    margin-right: 0.5rem;
   }
 }
 
@@ -741,7 +774,7 @@ a {
     }
 
     ul, ol {
-      padding: 0 0 0 1em;
+      padding: 0 0 0 1rem;
       margin: 0.5rem 0;
     }
   }
@@ -1066,6 +1099,7 @@ a {
   html {
     height: 100%;
     width: 100%;
+    font-size: 12px;
   }
 
   body {
@@ -1155,14 +1189,6 @@ a {
     &__images {
       max-width: 100%;
     }
-
-    //&__image-wrap {
-    //  //margin-right: 10px;
-    //
-    //  &:last-child {
-    //    margin-right: 0;
-    //  }
-    //}
   }
 
   .posting-form {
@@ -1194,7 +1220,7 @@ a {
     }
 
     ul {
-      padding-left: 1.5em;
+      padding-left: 1.5rem;
     }
   }
 
@@ -1209,15 +1235,20 @@ a {
     width: 100%;
   }
 
+  .catalog {
+    &__items {
+      margin: 0;
+      display: block;
+    }
+  }
+
   .catalog-item {
     border-radius: 0;
-
-    &__meta {
-    }
-
-    &__meta-label {
-      display: none;
-    }
+    width: 100%;
+    box-shadow: none;
+    margin: 0 auto;
+    height: auto;
+    border-bottom: @separator-border;
   }
 
   .placeholder-item {
