Show recently updated threads at the start page

--- a/src/frontend/style.less
+++ b/src/frontend/style.less
@@ -619,10 +619,12 @@ a {
 
 
 .catalog {
+  margin-bottom: 0.5rem;
+
   &__items {
     display: flex;
     flex-wrap: wrap;
-    margin: -0.5rem -0.5rem 0;
+    margin: -0.5rem;
   }
 }
 
@@ -1092,6 +1094,11 @@ a {
 
 .textarea-wrapper {
   flex: 1 0 0;
+}
+
+.board-block {
+  //margin: 3rem 0;
+  margin-bottom: 2rem;
 }
 
 
