Fixed markup links generated inside catalog links, markup module refactoring

--- a/src/imageboard/templates/imageboard/parts/catalog_item.html
+++ b/src/imageboard/templates/imageboard/parts/catalog_item.html
@@ -49,8 +49,7 @@
             <span class="catalog-item__title">
                 {{ op_post.title }}
             </span>
-            {% markup text=op_post.text board=board thread=thread post=op_post make_refs=False %}
+            {% markup text=op_post.text board=board thread=thread post=op_post make_refs=False make_links=False %}
         </div>
-
     </div>
 </a>
